<package>
  <name>orb_slam_2_catkin</name>
  <version>0.0.0</version>
  <description>orb_slam_2_catkin</description>
  <maintainer email="alexander.millane@mavt.ethz.com">Alexander Millane</maintainer>

  <license>See package</license>

  <url type="website">https://github.com/raulmur/ORB_SLAM2/</url>

  <author>Alexander Millane</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>eigen</build_depend>
  <build_depend>pangolin_catkin</build_depend>

</package>